# leakyemotions

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  README.md  gemSearch.ipynb  gemSearch_08092022.py  gemSearch_08102022.py  objectClasses.py  parent_child.ipynb  parent_child_emotion_conditions.ipynb  pyproject.toml  tag.py  tag_OLD.py  zeroed_emotion_comparison.ipynb
.github/workflows/: publish.yml  pytest.yml
agentarium/: buffers.py  config.py  location.py  logging_utils.py  utils.py  visual_field.py
agentarium/agents/: __init__.py  agent.py
agentarium/entities/: __init__.py  basic_entities.py  entity.py
agentarium/environments/: __init__.py  gridworld.py
agentarium/models/: DDQN.py  __init__.py  base.py  base_model.py  human_player.py  inverse.py  iqn.py  transformer.py
agentarium/observation/: observation.py  observation_spec.py  visual_field.py
agentarium/primitives/: __init__.py  agent.py  entity.py  environment.py  location.py  memory.py  vector.py
agentarium/utils/: helpers.py  logging.py  visualization.py
docs/: conf.py  requirements.in  requirements.txt
docs/source/: conf.py  index.md  index.rst
examples/RPG/: agents.py  config.py  config.yaml  elements.py  entities.py  env.py  main.py  main_mlp.py  test.py  utils.py
examples/RPG2/: elements.py  env.py  main.py
examples/RPG3/: elements.py  env.py  iRainbow_clean.py  iRainbow_newCnn.py  iqn.py  main.py
examples/RPG3_PPO/: PPO.py  PPO_CPC.py  env.py  main.py
examples/RPG4/: elements.py  env.py  iRainbow_newCnn.py  iRainbow_noCnn.py  main.py
examples/RTP/: elements.py  env.py  main.py  plot_results.py  plot_results_cond.py  run_models.py  utils.py
examples/ai_agents_with_market/: main.py
examples/ai_econ/: agents.py  entities.py  env.py  main.py  utils.py
examples/ai_economist/: elements.py  env.py  main.py
examples/ai_economist_simple/: AIEcon_simple_elements.py  AIEcon_simple_elements_modest.py  Model_LSTM.py  PPO.py  basic_aiEcon.txt  elements.py  elements_MLP.py  env.py  main.py  main_MLP.py  main_MLP_step2.py  main_step2.py  ppo_main-step2.py
examples/ai_market_decider/: Model_dualing_LSTM.py  dist_mlp.py  main.py  main_small.py  simple_mlp.py
examples/attitudes/: elements.py  env.py  env_noStoredValue.py  iRainbow_clean.py  iRainbow_noCnn.py  implicit_pilot1.txt  main.py  main2.py  main3.py  main4.py  main4_control.py  main4_control2.py  main4_exp2.py  main4_exp2_noBurnIn.py  main4_watch_learn.py  main4_watch_learn_use.py  main5.py  main_backup.py  main_rewardTransformer.py  main_weighted_averages.py  main_weighted_averages2.py  plot_results.py  plot_results2.py  study1_cb_1.txt  study1_cb_2.txt  study1_cb_3.txt  study1_cb_4.txt  study1_cb_5.txt  utils.py
examples/attitudes_CMS/: elements.py  env.py  (+4 more)
gem/: AIecon_LSTM_DQN.py  AIecon_noHouse_LSTM_DQN.py  DQN_utils.py  LSTM_testarea.py  PER_explore.py  agent.py  alien_learning.py  board.py  board_wil.py  board_wil_AC.py  currentWork_LSTM_DQN  currentWork_LSTM_DQN2  game_utils.py  gemGame.py  gemGame_081822.py  gemGame_experimental.py  gemGame_experimental_LSTM.py  gemandwolves.py  gemandwolves_failing.py  gemsWolves_LSTM_DQN  gemsWolves_LSTM_DQN.py  gemsWolves_LSTM_DQN_PER.py  gemsWolves_LSTM_DQN_experimental.py  gemsWolves_LSTM_DQN_no_curr.py  gemsWorldGame_DQN.py  gemsWorldGame_LSTM_AC.py  gemsWorldGame_LSTM_AC_dual.py  gemsWorldGame_LSTM_AC_experimental.py  gemsWorldGame_LSTM_DQN.py  gemsWorldGame_LSTM_DQN_experimental.py  gems_LSTM_DQN  gemsearch.py  gemsearch_oneModel.py  pc_basic.txt  primitives.py  runGames.py  runGames_LSTM.py  run_wolves_gems.py  tag.py  taxiCab_LSTM_DQN_PER.py  (+18 more)
sorrel/: buffers.py  config.py  environment.py  experiment.py  location.py
(+490 files in other folders)
